<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.caleydo</groupId>
	<artifactId>org.caleydo.parent</artifactId>
	<version>3.0.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<url>https://github.com/Caleydo/caleydo</url>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<java.version>1.7</java.version>
		<maven.version>3.0</maven.version>
		<tycho.version>0.18.1</tycho.version>
		<tycho-extras.version>${tycho.version}</tycho-extras.version>
		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<issueManagement>
		<url>${project.url}/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<licenses>
		<license>
			<name>BSD License</name>
			<url>http://www.opensource.org/licenses/bsd-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>{project.url}</url>
		<connection>scm:git:git://github.com/Caleydo/caleydo.git</connection>
		<developerConnection>scm:git:git@github.com:Caleydo/caleydo.git</developerConnection>
	</scm>

	<ciManagement>
		<system>Jenkins</system>
		<url>http://dev.caleydo.org/jenkins/job/caleydo</url>
	</ciManagement>

	<distributionManagement>
		<repository>
			<id>caleydo</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>caleydo</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>caleydo-public-p2</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/public-p2</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>caleydo-eclipse-p2</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/eclipse</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>caleydo-thirdparty-p2</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/thirdparty/.meta/p2</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>caleydo-public-p2</id>
			<url>http://dev.caleydo.org/nexus/content/repositories/public-p2</url>
			<layout>p2</layout>
		</pluginRepository>
	</pluginRepositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<configuration>
					<resolver>p2</resolver>
					<!-- <target> <artifact> <groupId>${project.groupId}</groupId> <artifactId>org.caleydo.internal</artifactId> 
						<version>${project.version}</version> </artifact> </target> -->
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-maven-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<!-- <dependencies>
						<dependency>
							<groupId>org.eclipse.tycho.extras</groupId>
							<artifactId>tycho-buildtimestamp-jgit</artifactId>
							<version>${tycho-extras.version}</version>
						</dependency>
					</dependencies> -->
					<configuration>
						<strictBinIncludes>false</strictBinIncludes>
						<format>'v'yyyyMMdd-HHmm</format>
						<!-- <timestampProvider>jgit</timestampProvider>
						<jgit.ignore>
						</jgit.ignore> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho.version}</version>
					<configuration>
						<useUIHarness>true</useUIHarness>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<argLine>${tycho.test.jvmArgs}</argLine>
						<!-- kill test JVM if tests take more than 1 minute (60 seconds) to 
							finish -->
						<forkedProcessTimeoutInSeconds>60</forkedProcessTimeoutInSeconds>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-versions-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
		</plugins>
	</reporting>

</project>